@@ -3,6 +3,8 @@ vorbis-tools 1.2.1 -- Unreleased
 * Fixed an error in configure.ac; --with-speex/flac work again (#1319)
 * Corrected problems in the Visual Studio project files
 * ogg123: backported fix from libfishsound to patch the Speex decoder (#1347)
+* ogg123: fixed CPU issue when outputting to a closed pipe (#1357)
+* ogg123: return value to stop decoding after buffer is shut down (#1357)
 * oggenc: fixed a core dump while resampling from FLAC (#1316)
 * oggenc: fixed a typo in the Skeleton handling routine
 * ogginfo: support for information in Kate streams (#1360)
